--- a/.config/hypr/exec-hyprland.conf
+++ b/.config/hypr/exec-hyprland.conf
@@ -10,3 +10,4 @@ env = XDG_SESSION_TYPE,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = GDK_BACKEND,wayland
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
