--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,8 +53,8 @@ $menu = rofi -show drun -theme $HOME/.config/rofi/theme.rasi
 # exec-once = waybar & hyprpaper & firefox
 exec-once = hyprpaper &
 exec-once = dunst & waybar &
-exec-once= /usr/lib/polkit-kde-authentication-agent-1 &
-
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
+exec-once = ./scripts/touchpad.sh &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -119,7 +119,7 @@ decoration {
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
 animations {
-    enabled = no, please :)
+    enabled = yes, please :)
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -305,6 +305,7 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+bindl = , XF86TouchpadToggle, exec, $scriptsDir/touchpad.sh
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
