--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,7 +37,7 @@ monitor=,preferred,auto,1
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = nemo
 $menu = rofi -show drun -theme $HOME/.config/rofi/theme.rasi
 
 
