--- a/config_sway/sway/config
+++ b/config_sway/sway/config
@@ -1,3 +1,5 @@
+include catppuccin-mocha
+
 # Default config for sway
 #
 # Copy this to ~/.config/sway/config and edit it to your liking.
@@ -14,7 +16,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term kitty
+set $term foot 
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -36,7 +38,10 @@ smart_borders on
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg $HOME/.config/sway/backgrounds/wpp6.jpg fill
+
+output eDP-1 res 1920x1080@60.000Hz pos 0 0
+output DP-1  res 1920x1080@50.000Hz pos 1920 0 transform 90
 #
 # Example configuration:
 #
@@ -61,12 +66,12 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
 # Example configuration:
 #
-   input "1267:12699:ASUE120A:00_04F3:319B_Touchpad" {
-       dwt enabled
-       tap enabled
-       natural_scroll disabled
-       middle_emulation enabled
-   }
+input "1267:12699:ASUE120A:00_04F3:319B_Touchpad" {
+  dwt enabled
+  tap enabled
+  natural_scroll disabled
+  middle_emulation enabled
+}
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
@@ -148,6 +153,20 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
+    # Defautl workspace
+    set $disp1 'eDP-1'
+    set $disp2 'DP-1'
+    workspace 1 output $disp1
+    workspace 2 output $disp1
+    workspace 3 output $disp1
+    workspace 4 output $disp1
+    workspace 5 output $disp1
+    workspace 6 output $disp1
+    workspace 7 output $disp1
+    workspace 8 output $disp1
+    workspace 9 output $disp2
+    workspace 10 output $disp2
+
 #
 # Layout stuff:
 #
@@ -209,6 +228,14 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
+
+# target                 title     bg    text   indicator  border
+client.focused           $lavender $base $text  $rosewater $lavender
+client.focused_inactive  $overlay0 $base $text  $rosewater $overlay0
+client.unfocused         $overlay0 $base $text  $rosewater $overlay0
+client.urgent            $peach    $base $peach $overlay0  $peach
+client.placeholder       $overlay0 $base $text  $overlay0  $overlay0
+client.background        $base
 
 #
 # Status Bar:
