--- a/config_sway/sway/config
+++ b/config_sway/sway/config
@@ -1,5 +1,7 @@
 include catppuccin-mocha
 
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec dunst &
 # Default config for sway
 #
 # Copy this to ~/.config/sway/config and edit it to your liking.
@@ -40,8 +42,9 @@ smart_borders on
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg $HOME/.config/sway/backgrounds/wpp6.jpg fill
 
-output eDP-1 res 1920x1080@60.000Hz pos 0 0
-output DP-1  res 1920x1080@50.000Hz pos 1920 0 transform 90
+output eDP-1 res 1920x1080@144.001Hz pos 0 0
+output DP-1  res 1920x1080@60.000Hz pos 1920 0 transform 90
+#output HDMI-A-1 res 1920x1080@60.000Hz pos 0 1920 
 #
 # Example configuration:
 #
@@ -267,3 +270,4 @@ bindsym XF86TouchpadToggle exec $scriptsDir/touchpad.sh
 bindsym XF86KbdBrightnessUp exec brightnessctl -d *kbd* set 1+
 bindsym XF86KbdBrightnessDown exec brightnessctl -d *kbd* set 1-
 
+bindsym $mod+Shift+S exec $scriptsDir/screenshot.sh --shotarea
